[tool.poetry]
name = "rag-confluence"
version = "0.1.0"
description = ""
authors = ["alfonso zamora"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-google-vertexai = "^1.0.7"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
transformers = "^4.42.4"
ollama = "^0.3.0"
langchain = "^0.2.10"
langchain-community = "^0.2.9"
tensorflow = "^2.17.0"
tiktoken = "^0.7.0"
neo4j = "^5.22.0"
selenium = "^4.23.0"
inflect = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
